--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitAra-Training Center</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
-<body>
+<body class="inter">
     
 </body>
 </html>
